--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "my-capsule-wardrobe",
   "version": "1.0.0",
   "description": "Project to try out react with typescript",
-  "main": "index.js",
+  "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run start:webpack",
-    "start:webpack": "node ./node_modules/webpack/bin/webpack"
+    "watch": "webpack --watch",
+    "build": "webpack",
+    "start": "node server.js"
   },
   "author": "Gabriela Vazquez",
   "license": "Apache-2.0",
@@ -15,11 +15,20 @@
     "@types/react-dom": "^16.0.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "semantic-ui-react": "^0.77.1",
     "webpack": "^3.10.0"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^0.1.17",
+    "css-loader": "^0.28.7",
+    "express": "^4.16.2",
+    "file-loader": "^1.1.5",
+    "html-webpack-plugin": "^2.30.1",
     "source-map-loader": "^0.2.3",
+    "style-loader": "^0.19.0",
     "ts-loader": "^3.2.0",
-    "typescript": "^2.6.2"
+    "typescript": "^2.6.2",
+    "webpack-dev-middleware": "^1.12.2",
+    "webpack-dev-server": "^2.9.7"
   }
 }
