--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "my-capsule-wardrobe",
   "version": "1.0.0",
   "description": "Project to try out react with typescript",
-  "main": "index.js",
+  "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run start:webpack",
-    "start:webpack": "node ./node_modules/webpack/bin/webpack"
+    "start": "webpack-dev-server --open",
+    "watch": "webpack -progress --watch",
+    "build": "webpack"
   },
   "author": "Gabriela Vazquez",
   "license": "Apache-2.0",
@@ -18,8 +18,12 @@
     "webpack": "^3.10.0"
   },
   "devDependencies": {
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.5",
     "source-map-loader": "^0.2.3",
+    "style-loader": "^0.19.0",
     "ts-loader": "^3.2.0",
-    "typescript": "^2.6.2"
+    "typescript": "^2.6.2",
+    "webpack-dev-server": "^2.9.7"
   }
 }
