--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "webpack": "^3.10.0"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
+    "html-webpack-plugin": "^2.30.1",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.19.0",
     "ts-loader": "^3.2.0",
