--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "webpack.config.js",
   "scripts": {
     "start": "webpack-dev-server --open",
-    "watch": "webpack -progress --watch",
-    "build": "webpack"
+    "watch": "webpack --watch",
+    "build": "webpack",
+    "server": "node server.js"
   },
   "author": "Gabriela Vazquez",
   "license": "Apache-2.0",
@@ -20,12 +21,14 @@
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
+    "express": "^4.16.2",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.19.0",
     "ts-loader": "^3.2.0",
     "typescript": "^2.6.2",
+    "webpack-dev-middleware": "^1.12.2",
     "webpack-dev-server": "^2.9.7"
   }
 }
