--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^16.0.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "semantic-ui-react": "^0.77.1",
     "webpack": "^3.10.0"
   },
   "devDependencies": {
